<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ABB_Activity" >

    <TextView
        android:id="@+id/textView_rec_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_marginTop="52dp"
        android:text="@string/received_message"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView_rec_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_rec_message"
        android:layout_marginRight="23dp"
        android:layout_marginTop="14dp"
        android:text=""
        android:textSize="20sp" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView_rec_message"
        android:layout_below="@+id/textView_rec_display"
        android:layout_marginTop="85dp"
        android:text="@string/send_button" />

    <EditText
        android:id="@+id/data_out_v_value"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/send_button"
        android:layout_marginLeft="17dp"
        android:layout_toRightOf="@+id/data_out_v_str"
        android:ems="10"
        android:inputType="textNoSuggestions" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/data_out_v_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/send_button"
        android:layout_alignBottom="@+id/send_button"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/data_out_n_value"
        android:text="@string/data_out_v_str" />

    <TextView
        android:id="@+id/data_out_n_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/data_out_v_str"
        android:layout_alignBottom="@+id/data_out_v_str"
        android:layout_alignLeft="@+id/textView_rec_display"
        android:text="@string/data_out_n_str" />

    <EditText
        android:id="@+id/data_out_n_value"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/data_out_v_value"
        android:layout_alignBottom="@+id/data_out_v_value"
        android:layout_marginLeft="19dp"
        android:layout_toRightOf="@+id/data_out_n_str"
        android:ems="10"
        android:inputType="textNoSuggestions" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_rec_display"
        android:layout_marginTop="23dp"
        android:layout_toRightOf="@+id/data_out_n_str"
        android:text="@string/welcome_message" />

</RelativeLayout>